# argapp-ws

./: .gitignore  .gitmodules  README.md  docinfo.html  index.adoc  index.html  pyproject.toml  release.sh
.uniws/: software.py
lib/test/: Dockerfile  test_import.py
tmp/: .gitignore  pyproject.toml
