[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argapp"
description = "A Python package for CLI application development"
version = "0.0.0"
readme = "argapp/README.md"
license = {file = "argapp/LICENSE"}
requires-python = ">= 3.6"
authors = [
  {name = "Volodymyr Zakalyk", email = "volodymyr.zakalyk@gmail.com"},
]
maintainers = [
  {name = "Volodymyr Zakalyk", email = "volodymyr.zakalyk@gmail.com"},
]
classifiers = [
  "Development Status :: 1 - Planning",

  "Intended Audience :: Developers",

  "Topic :: Software Development",

  "License :: OSI Approved :: MIT License",

  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
  "cli",
  "shell",
  "logging",
]

[project.urls]
Repository = "https://github.com/deohayer/argapp.git"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "argapp/LICENSE",
  "argapp/README.md",
]
